--- a/todo_list/src/App.css
+++ b/todo_list/src/App.css
@@ -1,38 +1,58 @@
 .App {
-  text-align: center;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #282c34;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    display: flex;
+    height: 80vh;
+    border: 1px solid grey;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todoForm {
+    display: flex;
+    justify-content: space-around;
+    width: 450px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input {
+    width: 80%;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    margin: 0 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.allTodos {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.singleTodo {
+    border-radius: 50px;
+    margin: 10px 0;
+    background-color: #5dadf8;
+    padding: 10px 20px;
+    display: flex;
+    width: 450px;
+    align-items: center;
+}
+
+.todoText {
+    flex: 1;
 }
